--- a/index.html
+++ b/index.html
@@ -6,17 +6,50 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<!--Font Awsome for the glypicons -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<!-- Optional CSS -->
-	<link href="css/travel.css">
-	<!-- Optional JavaScript -->
-	<script src="js/travel.js" async defer></script>
+	<link rel="stylesheet" href="css/travel.css">
+	
 	<title>Travel-o-matic</title>
 </head>
-<body>
+<body class="bg-light">
+	<header class="jumbotron text-center d-flex flex-column justify-content-center" id="header">
+		<h1>Travel-o-matic</h1>
+	</header>
+	<div class="container-flex">
+		<nav class="row navbar navbar-expand-sm navbar-light">
+			<a class="navbar-brand d-sm-none" href="#">Navbar</a>
+  			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-tab" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    			<span class="navbar-toggler-icon"></span>
+  			</button>
+			<div class="nav nav-tabs collapse navbar-collapse text-center justify-content-center" id="nav-tab" role="tablist">
+				<a class="nav-item nav-link active px-5" id="location-tab" data-toggle1="collapse" data-toggle="tab" href="#location" role="tab" aria-controls="location" aria-selected="true"><h1><i class="fas fa-map-marked-alt d-none d-sm-block"></i></h1><p>Location</p></a>
+				<a class="nav-item nav-link px-5" id="restaurants-tab" data-toggle="tab" href="#restaurants" role="tab" aria-controls="restaurants" aria-selected="false"><h1><i class="fas fa-utensils d-none d-sm-block"></i></h1><p>Restaurants</p></a>
+				<a class="nav-item nav-link px-5" id="events-tab" data-toggle="tab" href="#events" role="tab" aria-controls="events" aria-selected="false"><h1><i class="fas fa-ticket-alt d-none d-sm-block"></i></h1><p>events</p></a>
+			</div>
+		</nav>
+		<div class="tab-content" id="nav-tabContent">
+			<div class="tab-pane fade show active px-4" id="location" role="tabpanel" aria-labelledby="location-tab">
+				<div class="row" id="Location"></div>
+			</div>
+			<div class="tab-pane fade px-4" id="restaurants" role="tabpanel" aria-labelledby="restaurants-tab">
+				<div class="row" id="Restaurants"></div>
+			</div>
+			<div class="tab-pane fade  px-4" id="events" role="tabpanel" aria-labelledby="events-tab">
+				<div class="row" id="Events"></div>
+			</div>
+		</div>		
+	</div>
 
+	
+
+	
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <!-- Optional JavaScript -->
+	<script src="js/travel.js"></script>
 </body>
 </html>
