--- a/index-desc.html
+++ b/index-desc.html
@@ -23,10 +23,10 @@
   			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-tab" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     			<span class="navbar-toggler-icon"></span>
   			</button>
-			<div class="nav nav-tabs collapse navbar-collapse text-center justify-content-center" id="nav-tab" role="tablist">
-				<a class="nav-item nav-link active px-5" id="location-tab" data-toggle1="collapse" data-toggle="tab" href="#location" role="tab" aria-controls="location" aria-selected="true"><h1><i class="fas fa-map-marked-alt d-none d-sm-block"></i></h1><p>Locations</p></a>
-				<a class="nav-item nav-link px-5" id="restaurants-tab" data-toggle="tab" href="#restaurants" role="tab" aria-controls="restaurants" aria-selected="false"><h1><i class="fas fa-utensils d-none d-sm-block"></i></h1><p>Restaurants</p></a>
-				<a class="nav-item nav-link px-5" id="events-tab" data-toggle="tab" href="#events" role="tab" aria-controls="events" aria-selected="false"><h1><i class="fas fa-ticket-alt d-none d-sm-block"></i></h1><p>Events</p></a>
+			<div class="nav nav-tabs collapse navbar-collapse text-center justify-content-center align-items-sm-stretch" id="nav-tab" role="tablist">
+				<a class="nav-item nav-link active px-5 d-flex flex-column justify-content-end" id="location-tab" data-toggle1="collapse" data-toggle="tab" href="#location" role="tab" aria-controls="location" aria-selected="true"><h1 class="d-none d-sm-block"><i class="fas fa-map-marked-alt"></i></h1><p>Locations</p></a>
+				<a class="nav-item nav-link px-5 d-flex flex-column justify-content-end" id="restaurants-tab" data-toggle="tab" href="#restaurants" role="tab" aria-controls="restaurants" aria-selected="false"><h1 class="d-none d-sm-block"><i class="fas fa-utensils d-none d-sm-block"></i></h1><p>Restaurants</p></a>
+				<a class="nav-item nav-link px-5 d-flex flex-column justify-content-end" id="events-tab" data-toggle="tab" href="#events" role="tab" aria-controls="events" aria-selected="false"><h1 class="d-none d-sm-block"><i class="fas fa-ticket-alt d-none d-sm-block"></i></h1><p>Events</p></a>
 			</div>
 		</nav>
 		<div class="tab-content" id="nav-tabContent">
